# ParallelProgramming

./: .gitignore  README.md
001_Hello_world/: Makefile  README.md  square  square.cu
002_GrayScaleConversion/: .cproject  .project  CMakeLists.txt  HW1.h  README.md  compare.cpp  compare.h  main.cpp  reference_calc.h  student_func.cu  timer.h
003-atomic/: .cproject  .project  atomic.cu  gputimer.h
004_BlurImage/: .cproject  .project  CMakeLists.txt  HW2.h  Readme.md  compare.cpp  reference_calc.h  student_func.cu
005-Reduce/: .cproject  .project  CMakeLists.txt
006-TuneMapping/: .cproject  .project  CMakeLists.txt  student_func.cu
007-RedEyeRemoval/: .cproject  .project  CMakeLists.txt  compare.cpp  compare.h  reference_calc.h  student_func.cu
008-transpose/: .cproject  .project  transpose.cu
